--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-native-snap-carousel": "^3.8.5",
     "@types/styled-components": "^5.1.22",
     "@types/styled-components-react-native": "^5.1.3",
+    "axios": "^0.27.2",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.6",
@@ -32,10 +33,10 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^2.3.2",
-    "react-native-image-modal": "^2.0.4",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^4.7.3",
     "react-native-modal": "^12.1.0",
+    "react-native-modalize": "^2.0.13",
     "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
