--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "^2.3.2",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^4.7.3",
+    "react-native-image-slider-box": "^1.1.24",
     "react-native-modal": "^12.1.0",
     "react-native-modalize": "^2.0.13",
     "react-native-pager-view": "5.4.9",
