--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.6",
     "expo-blur": "~11.0.0",
+    "expo-constants": "^13.1.1",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-splash-screen": "~0.14.1",
@@ -42,8 +43,10 @@
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-pinchable": "^0.2.1",
+    "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-search-header": "^0.3.5",
     "react-native-select-dropdown": "^1.8.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^3.1.1",
