--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^4.7.3",
