--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-query": "^3.38.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "taghash": "^1.2.2"
   },
