--- a/app.json
+++ b/app.json
@@ -1,12 +1,14 @@
 {
   "expo": {
-    "name": "on-you-frontend_0617",
-    "slug": "on-you-frontend_0617",
+    "name": "on-you-frontend",
+    "slug": "on-you-frontend",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
     ],
-    "description": ""
+    "ios": {
+      "bundleIdentifier": "y"
+    }
   },
   "name": "on-you-frontend"
 }
