--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-picker/picker": "2.4.0",
+    "@react-native-async-storage/async-storage": "^1.17.5",
+    "@react-native-community/datetimepicker": "^6.2.0",
+    "@react-native-picker/picker": "2.2.1",
     "@react-native-seoul/kakao-login": "^3.4.3",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/material-top-tabs": "^6.1.1",
@@ -20,56 +21,61 @@
     "@types/styled-components": "^5.1.22",
     "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.27.2",
-    "expo": "^45.0.0",
-    "expo-app-loading": "~2.0.0",
-    "expo-asset": "~8.5.0",
-    "expo-blur": "~11.1.0",
-    "expo-constants": "~13.1.1",
-    "expo-font": "~10.1.0",
-    "expo-image-picker": "~13.1.1",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "form-data": "^4.0.0",
+    "expo": "~44.0.2",
+    "expo-app-loading": "~1.3.0",
+    "expo-asset": "~8.4.6",
+    "expo-blur": "~11.0.0",
+    "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "pretty-format": "^27.5.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-animatable": "^1.3.3",
-    "react-native-gesture-handler": "~2.2.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-modal": "^2.0.4",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^4.7.3",
-    "react-native-image-slider-box": "^1.1.24",
+    "react-native-image-slider-box": "^2.0.2",
     "react-native-mention-hashtag-text": "^1.0.3",
     "react-native-modal": "^12.1.0",
-    "react-native-modalize": "^2.0.13",
-    "react-native-pager-view": "5.4.15",
+    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-pinchable": "^0.2.1",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-search-header": "^0.3.5",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-select-dropdown": "^1.8.0",
+    "react-native-shadow-2": "^6.0.5",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "12.1.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^3.1.1",
+    "react-native-toast-notifications": "^3.3.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "0.17.1",
     "react-query": "^3.38.1",
     "react-redux": "^8.0.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "styled-components": "^5.3.3",
-    "taghash": "^1.2.2"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/jest": "^27.4.0",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@types/react": "^17.0.39",
+    "@types/react-native": "^0.66.15",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
-    "typescript": "~4.3.5"
+    "typescript": "^4.5.5"
   },
   "private": true
 }
