--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@baronha/react-native-multiple-image-picker": "^0.4.10",
     "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-native-community/datetimepicker": "^6.2.0",
     "@react-native-picker/picker": "2.2.1",
